// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridCol renders custom widths matching snapshot: GridCol custom widths example 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  padding-right: 15px;
  padding-left: 15px;
}

@media only screen and (min-width:641px) {
  .c0 {
    width: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

<GridCol
    columnFull={false}
    columnOneHalf={false}
    columnOneQuarter={false}
    columnOneThird={false}
    columnThreeQuarters={false}
    columnTwoThirds={false}
    setWidth="one-quarter"
  >
    <src__StyledColumn
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <div
        className="c0"
      >
        example
      </div>
    </src__StyledColumn>
  </GridCol>,
  .c0 {
  box-sizing: border-box;
  padding-right: 15px;
  padding-left: 15px;
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {
  .c0 {
    width: 75%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

<GridCol
    columnFull={false}
    columnOneHalf={false}
    columnOneQuarter={false}
    columnOneThird={false}
    columnThreeQuarters={false}
    columnTwoThirds={false}
    setWidth="three-quarters"
  >
    <src__StyledColumn
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="three-quarters"
    >
      <div
        className="c0"
      >
        example
      </div>
    </src__StyledColumn>
  </GridCol>,
  .c0 {
  box-sizing: border-box;
  padding-right: 15px;
  padding-left: 15px;
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {
  .c0 {
    width: 90%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

<GridCol
    columnFull={false}
    columnOneHalf={false}
    columnOneQuarter={false}
    columnOneThird={false}
    columnThreeQuarters={false}
    columnTwoThirds={false}
    setWidth="90%"
  >
    <src__StyledColumn
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="90%"
    >
      <div
        className="c0"
      >
        example
      </div>
    </src__StyledColumn>
  </GridCol>,
  .c0 {
  box-sizing: border-box;
  padding-right: 15px;
  padding-left: 15px;
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {
  .c0 {
    width: 33.3333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

@media only screen and (min-width:769px) {
  .c0 {
    width: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

<GridCol
    columnFull={false}
    columnOneHalf={false}
    columnOneQuarter={false}
    columnOneThird={false}
    columnThreeQuarters={false}
    columnTwoThirds={false}
    setDesktopWidth="one-quarter"
    setWidth="one-third"
  >
    <src__StyledColumn
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setDesktopWidth="one-quarter"
      setWidth="one-third"
    >
      <div
        className="c0"
      >
        example
      </div>
    </src__StyledColumn>
  </GridCol>,
  .c0 {
  box-sizing: border-box;
  padding-right: 15px;
  padding-left: 15px;
}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:769px) {

}

@media only screen and (min-width:641px) {
  .c0 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media only screen and (min-width:769px) {
  .c0 {
    width: 33.3333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
  }
}

<GridCol
    columnFull={false}
    columnOneHalf={false}
    columnOneQuarter={false}
    columnOneThird={false}
    columnThreeQuarters={false}
    columnTwoThirds={false}
    setDesktopWidth="one-third"
  >
    <src__StyledColumn
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setDesktopWidth="one-third"
    >
      <div
        className="c0"
      >
        example
      </div>
    </src__StyledColumn>
  </GridCol>,
]
`;

exports[`GridCol simple render matches snapshot: GridCol simple example 1`] = `
.c0 {
  box-sizing: border-box;
  padding-right: 15px;
  padding-left: 15px;
}

@media only screen and (min-width:641px) {
  .c0 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

<GridCol
  columnFull={false}
  columnOneHalf={false}
  columnOneQuarter={false}
  columnOneThird={false}
  columnThreeQuarters={false}
  columnTwoThirds={false}
>
  <src__StyledColumn
    columnFull={false}
    columnOneHalf={false}
    columnOneQuarter={false}
    columnOneThird={false}
    columnThreeQuarters={false}
    columnTwoThirds={false}
  >
    <div
      className="c0"
    >
      example
    </div>
  </src__StyledColumn>
</GridCol>
`;
